--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Shubham and I'm a <span class="typing-2"></span></div>
-                    <p>-------</p>
+                    <p>I'm a front-end and back-end developer who<br> loves building user-friendly websites and web<br> pages, enjoys writing documentation, loves<br> helping people learn how to code and<br> managing databases with My SQL, php<br> etc. I also really like drawing with css. </p>
                     <a href="cv.pdf" target="_blank">Download CV</a>
                 </div>
             </div>
@@ -72,21 +72,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>-------</p>
+                        <p>All webpages are designed with a focus on simplicity.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Advertising</div>
-                        <p>--------</p>
+                        <p>It has contributed a lot towards the betterment of the standard of living of the society.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>------</p>
+                        <p>App design combines the user interface (UI) and user experience (UX). </p>
                     </div>
                 </div>
                </div>
@@ -101,7 +101,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>------</p>
+                    <p>Full stack web developer responsible for<br> end-to-end web app development<br> and creative cloud engineering.</p>
                     
                 </div>
                 <div class="column right">
@@ -181,7 +181,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Piyush Kumar</div>
+                                <div class="sub-title">Shubham Raj</div>
                             </div>
                         </div>
                         <div class="row">
@@ -195,7 +195,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">kumarpiyush25777@gmail.com</div>
+                                <div class="sub-title">20BCS7505@cuchd.in</div>
                             </div>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.instagram.com/piyush168713/">Shubham Raj</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="https://www.instagram.com/raj_______shubham/">Shubham Raj</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="./script.js"></script>
