--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Piyush Kumar</div>
+                <div class="text-2">Shubham Raj</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
             </div>
